--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chatbot</title>
+    <title>Customer Service Chatbot</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <link
@@ -15,39 +15,51 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0"
     />
   </head>
+
   <body>
-    <div class="welcome">
-      <h1>Chatbot</h1>
-      <p>Click on the chat icon to start a conversation</p>
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <h2>Customer Support</h2>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Assistant</a></li>
+        <li><a href="#">Bookmark</a></li>
+        <li><a href="#">WIKI</a></li>
+        <button id="bookmark-btn">Help Desk</button>
+      </ul>
     </div>
+
+    <!-- Main Content Container -->
     <div class="container">
       <button class="chatbot-toggler">
         <span class="material-symbols-rounded">mode_comment</span>
         <span class="material-symbols-outlined">close</span>
       </button>
+
       <div class="chatbot">
         <header>
-          <h2>Chatbot</h2>
+          <h2>Customer Service Assistant</h2>
           <span class="close-btn material-symbols-outlined">close</span>
         </header>
+
         <ul class="chatbox">
           <li class="chat incoming">
             <span class="material-symbols-outlined">smart_toy</span>
-            <p>Hello &#128079; <br />How can I assist you today?</p>
+            <p>Hello &#128079; How may I assist you with your issue today?</p>
           </li>
-          <!-- <li class="chat outgoing">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </li> -->
         </ul>
 
         <div class="chat-input">
-          <textarea
-            placeholder="Send a Message"
-            spellcheck="false"
-            required
-          ></textarea>
+          <textarea placeholder="Type your issue..." spellcheck="false" required></textarea>
           <span id="send-btn" class="material-symbols-outlined">send</span>
         </div>
+      </div>
+
+      <!-- Favorite Buttons in the middle of the page -->
+      <div class="favorites">
+        <button class="favorite-btn">❤️ Favorite 1</button>
+        <button class="favorite-btn">❤️ Favorite 2</button>
+        <button class="favorite-btn">❤️ Favorite 3</button>
       </div>
     </div>
   </body>
